Stabilize CFF class roots across ZGC